@@ -1,0 +1,25 @@
+### systolic blood pressure data (source: Kleinbaum et al.)
+sbp <- structure(list(gender = structure(as.integer(c(2, 2, 2, 2, 2,
+2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,
+2, 2, 2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,
+1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,
+1)), .Label = c("male", "female"), class = "factor"), sbp =
+as.integer(c(144,
+138, 145, 162, 142, 170, 124, 158, 154, 162, 150, 140, 110, 128,
+130, 135, 114, 116, 124, 136, 142, 120, 120, 160, 158, 144, 130,
+125, 175, 158, 185, 152, 159, 176, 156, 184, 138, 172, 168, 176,
+164, 154, 124, 142, 144, 149, 128, 130, 138, 150, 156, 134, 134,
+174, 174, 158, 144, 139, 180, 165, 172, 160, 157, 170, 153, 148,
+140, 132, 169)), age = as.integer(c(39, 45, 47, 65, 46, 67, 42,
+67, 56, 64, 56, 59, 34, 42, 48, 45, 17, 20, 19, 36, 50, 39, 21,
+44, 53, 63, 29, 25, 69, 41, 60, 41, 47, 66, 47, 68, 43, 68, 57,
+65, 57, 61, 36, 44, 50, 47, 19, 22, 21, 38, 52, 41, 18, 51, 55,
+65, 33, 23, 70, 56, 62, 51, 48, 59, 40, 35, 33, 26, 61))), .Names =
+c("gender",
+"sbp", "age"), row.names = c("1", "2", "3", "4", "5", "6", "7",  
+"8", "9", "10", "11", "12", "13", "14", "15", "16", "17", "18",  
+"19", "20", "21", "22", "23", "24", "25", "26", "27", "28", "29",
+"30", "31", "32", "33", "34", "35", "36", "37", "38", "39", "40",
+"41", "42", "43", "44", "45", "46", "47", "48", "49", "50", "51",
+"52", "53", "54", "55", "56", "57", "58", "59", "60", "61", "62",
+"63", "64", "65", "66", "67", "68", "69"), class = "data.frame")
