@@ -7,6 +7,8 @@
 
     o   allow xlab and ylab arguments for plot.cld
 
+    o   systolic blood pressure data set added
+
 
 		CHANGES in `multcomp' VERSION 1.1-2
 
